网络的infer基本跑起来，结果还没有处理

--- a/tests/test_cityscapes.ipynb
+++ b/tests/test_cityscapes.ipynb
@@ -35,7 +35,7 @@
    "source": [
     "from configs.parser import Parser\n",
     "\n",
-    "C = Parser(\"configs/default.yaml\").C.data\n",
+    "C = Parser(\"configs/default.yaml\").C\n",
     "C"
    ]
   },
@@ -56,8 +56,8 @@
    "source": [
     "from datas import get_loader\n",
     "\n",
-    "train_loader = get_loader(C, \"train\", distributed=False)\n",
-    "valid_loader = get_loader(C, \"val\", distributed=False)"
+    "train_loader = get_loader(C.data, \"train\", distributed=False)\n",
+    "valid_loader = get_loader(C.data, \"val\", distributed=False)"
    ]
   },
   {
@@ -118,15 +118,15 @@
    "source": [
     "import torch\n",
     "from model import deeplabv3, PointHead, PointRend\n",
-    "from torchvision.models.utils import load_state_dict_from_url\n",
+    "# from torchvision.models.utils import load_state_dict_from_url\n",
     "\n",
     "device = torch.device(\"cuda\")\n",
     "net = PointRend(\n",
     "  deeplabv3(**C.net.deeplab),\n",
     "  PointHead(**C.net.pointhead)\n",
     ").to(device)\n",
-    "state_dict = load_state_dict_from_url('*.pth', progress=True)\n",
-    "net.load_state_dict(state_dict)\n",
+    "# state_dict = load_state_dict_from_url('*.pth', progress=True)\n",
+    "net.load_state_dict(torch.load('*.pth'), strict=True) #state_dict)\n",
     "net.eval()\n",
     "print(\"Done\")"
    ]
@@ -139,9 +139,9 @@
    "source": [
     "for img, mask in train_loader.dataset:\n",
     "  with torch.no_grad():\n",
-    "    res2, out = net(img)\n",
+    "    out = net(img)\n",
     "    \n",
-    "  res2, out\n",
+    "  # out 中包含了很多数据，怎么处理还不知道\n",
     "  break\n"
    ]
   },
